Setting up Three js

--- a/2D Platformer/index.html
+++ b/2D Platformer/index.html
@@ -8,14 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
 
 <body>
 
+    <script type="text/javascript" src="JavaScript/Libraries/three.js"></script>
 
-    <script src="JavaScript/Librarys/three.js"></script>
+    <script type="text/javascript" src="JavaScript/keyboard.js"></script>
 
-    <script src="JavaScript/Main.js"></script>
+    <script type="text/javascript" src="JavaScript/Main.js"></script>
 
 </body>
 
